Fixed sizing issues of the percentage on smaller screens

--- a/master.css
+++ b/master.css
@@ -23,7 +23,7 @@ html {
 #time h1 {
   display: block;
   /* margin-top: -100px; */
-  font-size: 80px;
+  font-size: 10vw;
   font-weight: 200;
   /*text-shadow: 0 2px 10px grey;*/
   padding: 0 40px;
@@ -31,6 +31,12 @@ html {
   box-shadow: 0 2px 10px #aaa inset;
   /*border: 1px solid #aaa;*/
   overflow: hidden;
+}
+
+@media (min-width: 1200px) {
+  #time h1 {
+    font-size: 100px;
+  }
 }
 
 #scenario {
